yml/maintainenance/network-policies/egress-lab.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: Internal
  policyTypes:
  - Egress
  - Ingress
  ingress:
    - {}
  egress: 
  - to:
    - podSelector:
        matchLabels:
          name: payroll
    ports:
    - protocol: TCP
      port: 8080
 
  - to:
    - podSelector:
        matchLabels:
          name: mysql
    ports:
    - protocol: TCP
      port: 3306
  
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
